--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .latihan 5(prak3)\Prak3_2117020036_MUHAMMAD IFFAN RAMADHAN.docx
 .latihan 6(prak 4)\Prak4_2117020036_MUHAMMAD IFFAN RAMADHAN.docx
+.latihan 7\2117020036_MUHAMMAD IFFAN RAMADHAN.docx
